--- a/.webpackrc
+++ b/.webpackrc
@@ -18,5 +18,19 @@
   },
   "publicPath": "/",
   "disableDynamicImport": false,
-  "hash": true
+  "hash": true,
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:8080",
+      "pathRewrite": {"^/api" : "/pep"}
+    },
+    "/workflow": {
+      "target": "http://localhost:8080",
+      "pathRewrite": {"^/workflow" : "/pep/workflow"}
+    },
+    "/pep": {
+      "target": "http://localhost:8080",
+      "pathRewrite": {"^/pep/workflow/service" : "/pep/workflow/service"}
+    }
+  }
 }
