--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "roadhog-api-doc": "^0.3.4",
     "rollbar": "^2.3.4",
     "stylelint": "^8.4.0",
-    "stylelint-config-standard": "^18.0.0"
+    "stylelint-config-standard": "^18.0.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "optionalDependencies": {
     "nightmare": "^2.10.0"
