--- a/.webpackrc
+++ b/.webpackrc
@@ -18,19 +18,5 @@
   },
   "publicPath": "/",
   "disableDynamicImport": false,
-  "hash": true,
-  "proxy": {
-    "/api": {
-      "target": "http://localhost:8080",
-      "pathRewrite": {"^/api" : "/pep"}
-    },
-    "/workflow": {
-      "target": "http://localhost:8080",
-      "pathRewrite": {"^/workflow" : "/pep/workflow"}
-    },
-    "/pep": {
-      "target": "http://localhost:8080",
-      "pathRewrite": {"^/pep/workflow/service" : "/pep/workflow/service"}
-    }
-  }
+  "hash": true
 }
