--- a/.eslintrc
+++ b/.eslintrc
@@ -49,12 +49,14 @@
     "no-else-return": [0],
     "no-restricted-syntax": [0],
     "import/no-extraneous-dependencies": [0],
+    "import/no-dynamic-require": [0],
     "no-use-before-define": [0],
     "jsx-a11y/no-static-element-interactions": [0],
     "jsx-a11y/no-noninteractive-element-interactions": [0],
     "jsx-a11y/click-events-have-key-events": [0],
     "jsx-a11y/anchor-is-valid": [0],
     "no-nested-ternary": [0],
+    "no-underscore-dangle": [0],
     "arrow-body-style": [0],
     "import/extensions": [0],
     "no-bitwise": [0],
