--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "proper-platform",
-  "version": "0.3.4",
-  "description": "propersoft integration platform",
+  "name": "proper-enterprise-app",
+  "version": "0.4.0",
+  "description": "propersoft enterprise application",
   "private": true,
   "scripts": {
     "precommit": "npm run lint-staged",
     "start": "cross-env DISABLE_ESLINT=true roadhog dev",
     "mock": "node proxy/proxy-server.js",
+    "init": "node .init-project.js",
+    "setup": "npm install && npm run init",
     "build": "cross-env DISABLE_ESLINT=true roadhog build",
     "site": "roadhog-api-doc static && gh-pages -d dist",
     "analyze": "cross-env DISABLE_ESLINT=true ANALYZE=true roadhog build",
@@ -46,7 +48,9 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.2.0",
     "react-fittext": "^1.0.0",
-    "url-polyfill": "^1.0.10"
+    "url-polyfill": "^1.0.10",
+    "@pea/module-auth": "^0.0.1",
+    "@pea/module-workflow": "^0.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.1.2",
