--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "private": true,
   "scripts": {
     "precommit": "npm run lint-staged",
-    "start": "cross-env DISABLE_ESLINT=true roadhog dev",
+    "start": "cross-env ESLINT=none roadhog dev",
     "mock": "node proxy/proxy-server.js",
     "init": "node .init-project.js",
     "setup": "npm install && npm run init",
-    "build": "cross-env DISABLE_ESLINT=true roadhog build",
+    "build": "cross-env ESLINT=none roadhog build",
     "site": "roadhog-api-doc static && gh-pages -d dist",
-    "analyze": "cross-env DISABLE_ESLINT=true ANALYZE=true roadhog build",
+    "analyze": "cross-env ESLINT=none ANALYZE=true roadhog build",
     "lint:style": "stylelint \"src/**/*.less\" --syntax less",
     "lint": "eslint --ext .js src mock tests && npm run lint:style",
     "lint:fix": "eslint --fix --ext .js src mock tests && npm run lint:style",
