--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "@antv/data-set": "^0.8.0",
     "@babel/polyfill": "^7.0.0-beta.36",
     "antd": "^3.3.0",
+    "babel-preset-umi": "^0.2.8",
     "babel-runtime": "^6.9.2",
     "bizcharts": "^3.1.3-beta.1",
     "bizcharts-plugin-slider": "^2.0.1",
     "classnames": "^2.2.5",
     "dva": "^2.1.0",
     "dva-loading": "^1.0.4",
-    "enquire-js": "^0.1.1",
+    "enquire-js": "^0.2.1",
     "fastclick": "^1.0.6",
     "lodash": "^4.17.4",
     "lodash-decorators": "^4.4.1",
@@ -55,8 +56,7 @@
   "devDependencies": {
     "babel-eslint": "^8.1.2",
     "babel-plugin-dva-hmr": "^0.4.1",
-    "babel-plugin-import": "^1.6.3",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-import": "^1.6.7",
     "cross-env": "^5.1.1",
     "cross-port-killer": "^1.0.1",
     "enzyme": "^3.1.0",
@@ -70,6 +70,7 @@
     "eslint-plugin-react": "^7.0.1",
     "gh-pages": "^1.0.0",
     "husky": "^0.14.3",
+    "json-server": "^0.12.1",
     "lint-staged": "^6.0.0",
     "mockjs": "^1.0.1-beta3",
     "pro-download": "^1.0.1",
