--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,7 @@
     "react/jsx-closing-tag-location": [0],
     "react/jsx-indent-props": [0],
     "react/sort-comp": [0],
+    "react/no-find-dom-node": [0],
     "object-property-newline": [0],
     "object-curly-spacing": [0],
     "arrow-spacing": [0],
