--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@antv/data-set": "^0.8.0",
     "@babel/polyfill": "^7.0.0-beta.36",
+    "@pea/module-auth": "^0.4.0",
+    "@pea/module-workflow": "^0.4.0",
     "antd": "^3.3.0",
     "babel-preset-umi": "^0.2.8",
     "babel-runtime": "^6.9.2",
@@ -34,6 +36,7 @@
     "dva-loading": "^1.0.4",
     "enquire-js": "^0.2.1",
     "fastclick": "^1.0.6",
+    "immutability-helper": "^2.6.6",
     "lodash": "^4.17.4",
     "lodash-decorators": "^4.4.1",
     "moment": "^2.19.1",
@@ -46,12 +49,12 @@
     "react": "^16.2.0",
     "react-container-query": "^0.9.1",
     "react-cookies": "^0.1.0",
+    "react-dnd": "^2.6.0",
+    "react-dnd-html5-backend": "^2.6.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.2.0",
     "react-fittext": "^1.0.0",
-    "url-polyfill": "^1.0.10",
-    "@pea/module-auth": "^0.4.0",
-    "@pea/module-workflow": "^0.4.0"
+    "url-polyfill": "^1.0.10"
   },
   "devDependencies": {
     "babel-eslint": "^8.1.2",
