--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.2.0",
     "react-fittext": "^1.0.0",
-    "url-polyfill": "^1.0.10"
+    "url-polyfill": "^1.0.10",
+    "av-core": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.1.2",
