--- a/.eslintrc
+++ b/.eslintrc
@@ -75,7 +75,8 @@
     "no-restricted-globals": [0],
     "require-yield": [1],
     "compat/compat": "error",
-    "linebreak-style":[0]
+    "linebreak-style": [0],
+    "no-param-reassign": [0]
   },
   "parserOptions": {
     "ecmaFeatures": {
