--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@pea/module-auth": "^0.4.0",
     "@pea/module-workflow": "^0.4.0",
     "antd": "^3.3.0",
+    "av-core": "^1.1.1",
     "babel-preset-umi": "^0.2.8",
     "babel-runtime": "^6.9.2",
     "bizcharts": "^3.1.3-beta.1",
@@ -45,6 +46,7 @@
     "omit.js": "^1.0.0",
     "path-to-regexp": "^2.1.0",
     "prop-types": "^15.5.10",
+    "qrcode.react": "^0.8.0",
     "qs": "^6.5.0",
     "rc-drawer-menu": "^0.5.0",
     "react": "^16.2.0",
@@ -55,8 +57,7 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.2.0",
     "react-fittext": "^1.0.0",
-    "url-polyfill": "^1.0.10",
-    "av-core": "^1.1.1"
+    "url-polyfill": "^1.0.10"
   },
   "devDependencies": {
     "babel-eslint": "^8.1.2",
