--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.2.0",
     "react-fittext": "^1.0.0",
+    "react-infinite-scroller": "^1.2.0",
     "url-polyfill": "^1.0.10"
   },
   "devDependencies": {
