--- a/.eslintrc
+++ b/.eslintrc
@@ -76,7 +76,8 @@
     "require-yield": [1],
     "compat/compat": "error",
     "linebreak-style": [0],
-    "no-param-reassign": [0]
+    "no-param-reassign": [0],
+    "max-len":[1,200]
   },
   "parserOptions": {
     "ecmaFeatures": {
