--- a/src/framework/package.json
+++ b/src/framework/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pea/framework",
-  "version": "0.4.4",
-  "description": "",
+  "version": "0.4.4-rc01",
+  "description": "pea/framework",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
