--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pea/lib",
-  "version": "0.4.4",
-  "description": "pea lib",
+  "version": "0.4.4-rc01",
+  "description": "pea/lib",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
